...
                app:chipStrokeColor="@color/border_color"
                android:textColor="@color/white"
                android:text="@string/x"
                tools:targetApi="lollipop" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                app:chipBackgroundColor="@color/bg_chip_flood_state"
                app:chipStrokeColor="@color/border_color"
                app:chipIcon="@drawable/ic_calendar_month_24"
...
                android:paddingEnd="16dp"
                android:paddingStart="8dp"
                app:singleSelection="true"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_disaster_flood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipBackgroundColor="@color/bg_chip_flood_state"
                    app:chipStrokeColor="@color/border_color"
                    app:chipIcon="@drawable/ic_round_flood_24"
                    android:textColor="@color/bg_chip_text_state"
...
