<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".ui.list.DisasterListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_disaster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_disaster"/>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_container"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <include layout="@layout/item_disaster_placeholder"/>
            <include layout="@layout/item_disaster_placeholder"/>
            <include layout="@layout/item_disaster_placeholder"/>
            <include layout="@layout/item_disaster_placeholder"/>
            <include layout="@layout/item_disaster_placeholder"/>
            <include layout="@layout/item_disaster_placeholder"/>
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

</FrameLayout>